# exam-qa-extractor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.es.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.atl/: skill-registry.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 001_initial.py  002_remove_difficulty.py  003_add_uuid_columns.py
app/: alembic.ini  config.py  dependencies.py  main.py
app/api/: __init__.py  _flash.py  analytics.py  answers.py  exams.py  import_export.py  pages.py  practice.py  questions.py  search.py
app/api/internal/: __init__.py
app/api/v1/endpoints/: answers.py  exams.py  pages.py  questions.py  search.py  subjects.py
app/core/: constants.py  exceptions.py  slug.py
app/db/: base.py  init_db.py  seeds.yaml  session.py
app/db/migrations/versions/: 001_initial.py  002_remove_difficulty.py  003_add_uuid_columns.py  004_add_subjects_topics.py  005_drop_topic_column.py  006_add_error_review_mode.py
app/models/: __init__.py  answer.py  exam.py  exam_image.py  practice_response.py  practice_session.py  question.py  subject.py  topic.py
app/schemas/: __init__.py  analytics.py  answer.py  exam.py  json_io.py  practice.py  question.py  search.py  subject.py  topic.py
app/services/: __init__.py  analytics_service.py  answer_service.py  exam_service.py  json_io_service.py  ocr_service.py  practice_service.py  question_service.py  search_service.py  storage_service.py
app/services/ocr/: __init__.py  base.py  factory.py  openai_vision.py  tesseract.py  types.py
app/static/css/: styles.css
app/static/js/: app.js  import-export.js
app/templates/: base.html  dashboard.html
app/templates/analytics/: dashboard.html  weak_areas.html
app/templates/answers/: form.html  manage.html
app/templates/exams/: detail.html  form.html  list.html
app/templates/practice/: question.html  results.html  start.html
app/templates/questions/: bulk_upload.html  correct.html  detail.html  list.html  manual_form.html  review_queue.html
docker/: entrypoint.sh
openspec/: project_context.yaml
openspec/changes/add-delete-functionality-frontend/: proposal.md
openspec/changes/archive/2026-06-09-docker-containerization/: archive-report.md  design.md  explore.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-docker-containerization/specs/container-image/: spec.md
openspec/changes/archive/2026-07-01-feat-topic-domain-refactor/: archive-report.md  design.md  verify-report.md
openspec/changes/archive/2026-07-03-error-review-practice-mode/: archive-report.md  design.md  exploration.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-03-error-review-practice-mode/specs/practice-modes/: spec.md
openspec/changes/archive/2026-07-22-fix-mypy-baseline/: apply-progress.md  archive-report.md  design.md  proposal.md  verify-report.md
openspec/changes/archive/2026-07-22-fix-mypy-baseline/specs/type-correctness/: spec.md
openspec/changes/docker-containerization/: tasks.md
openspec/changes/feat-topic-domain-refactor/: apply-progress.md  proposal.md  tasks.md
openspec/changes/feat-topic-domain-refactor/specs/question-extraction/: spec.md
openspec/changes/feat-topic-domain-refactor/specs/subject-management/: spec.md
openspec/changes/feat-topic-domain-refactor/specs/topic-management/: spec.md
openspec/changes/fix-exam-list-and-edit-navigation/: apply-progress.md  design.md  explore-broad.md  explore.md  proposal.md  tasks.md  verify-report.md
openspec/changes/fix-exam-list-and-edit-navigation/specs/crud-navigation/: spec.md
openspec/changes/fix-exam-list-and-edit-navigation/specs/form-interaction/: spec.md
openspec/changes/fix-mypy-baseline/: tasks.md
openspec/changes/openai-vision-integration/: explore.md
openspec/changes/openai-vision-ocr/: proposal.md
openspec/specs/container-runtime/: spec.md
openspec/specs/exam-management/: spec.md
openspec/specs/import-export/: spec.md
openspec/specs/type-correctness/: spec.md
tests/: conftest.py  test_json_io_service.py  test_schemas_json_io.py  test_topic_services.py
tests/api/: test_dashboard_ui.py  test_exam_uuid_on_wire.py  test_form_helpers.py  test_import_export_endpoints.py  test_redirect_targets.py  test_subject_endpoints.py
tests/integration/api/: test_health.py  test_practice.py
tests/migrations/: test_003_add_uuid_columns.py
tests/models/: test_models_uuid.py  test_subject_topic.py
tests/schemas/: test_uuid_exposure.py
tests/unit/services/: test_exam_service.py  test_practice_service.py
