[project]
name = "exam-study-system"
version = "0.1.0"
description = "OCR-powered API to extract questions from exam images, manage answers, and run interactive practice sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.104.0,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",

    # Database
    "sqlalchemy>=2.0.0,<3.0",
    "alembic>=1.12.0,<2.0",
    "aiosqlite>=0.19.0,<1.0",

    # Validation & settings
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0,<3.0",

    # OCR and image processing
    "pytesseract>=0.3.10,<1.0",
    "pillow>=10.1.0,<12.0",
    "opencv-python-headless>=4.8.0,<5.0",
    "numpy>=1.26.0,<3.0",
    "pymupdf>=1.23.0,<2.0",  # PDF handling
    "openai>=1.0.0,<2.0",

    # File handling
    "python-multipart>=0.0.6,<1.0",
    "python-magic>=0.4.27,<1.0",

    # Templates
    "jinja2>=3.1.2,<4.0",

    # Environment
    "python-dotenv>=1.0.0,<2.0",

    # Logging
    "structlog>=23.2.0,<26.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=5.0.0,<7.0",
    "httpx>=0.27.0,<1.0",
    "factory-boy>=3.3.0,<4.0",
    "freezegun>=1.5.0,<2.0",

    # Code quality — ruff handles formatting too; black removed
    "ruff>=0.8.0,<1.0",
    "mypy>=1.13.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (skip with -m 'not slow')",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
]
ignore = ["E501"]  # line length handled by ruff format

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "pytesseract"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "magic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cv2"
ignore_missing_imports = true
